--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -109,12 +109,9 @@ LastExecutedPlayModeType=PlayMode_InEditorFloating
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=False
-OpenAssetsAtExit=/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt
-OpenAssetsAtExit=/Game/ConveyorBelt/BP_Box.BP_Box
-OpenAssetsAtExit=/Game/ConveyorBelt/BP_Gate.BP_Gate
-OpenAssetsAtExit=/Game/ConveyorBelt/W_ConveyorBelt.W_ConveyorBelt
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2209,7 +2206,7 @@ Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Obj
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
 INT_TextBased_C=
-INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Dialogue.Phase Dialogue\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.PRogression.CutsceneTrigger\" \"Object.PRogression.ObjectiveTriggers\" "
+INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Default.PhaseItemID.PhaseItemID_Value[1]\" \"Object.Default.PhaseItemID.PhaseItemID_Value[2]\" \"Object.Default.PhaseItemID.PhaseItemID_Value[3]\" \"Object.Dialogue.Phase Dialogue\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[3].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.PRogression.CutsceneTrigger\" \"Object.PRogression.ObjectiveTriggers\" "
 None=======
 None=======
 None=======
@@ -3414,7 +3411,7 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Variab
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,
 CapsuleComponent=
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,
-SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,
+SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.ImageContainers,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,
@@ -3560,26 +3557,26 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ConveyorBelt/W_ConveyorBelt
-MRUItem1=/Game/ConveyorBelt/BP_Gate
-MRUItem2=/Game/ConveyorBelt/BP_Box
-MRUItem3=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem4=/Game/ThirdPerson/Blueprints/HUD/W_HUD
-MRUItem5=/Game/ThirdPerson/PostProcess/FadeSquence
-MRUItem6=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_Full
-MRUItem7=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
-MRUItem8=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
-MRUItem9=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
-MRUItem10=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
-MRUItem11=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
-MRUItem12=/Game/UIElements/Menus/Wire_Cutters__text_png
-MRUItem13=/Game/ThirdPerson/Interfaces/IF_Inventory
-MRUItem14=/Game/UIElements/Menus/Kieth’s_ID_text_
-MRUItem15=/Game/ThirdPerson/Menus/S_ItemReference
-MRUItem16=/Game/ThirdPerson/Menus/W_Inventory
-MRUItem17=/Game/ThirdPerson/Menus/W_StartMenu
-MRUItem18=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_P1
-MRUItem19=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem1=/Game/ConveyorBelt/W_ConveyorBelt
+MRUItem2=/Game/ConveyorBelt/BP_Gate
+MRUItem3=/Game/ConveyorBelt/BP_Box
+MRUItem4=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem5=/Game/ThirdPerson/Blueprints/HUD/W_HUD
+MRUItem6=/Game/ThirdPerson/PostProcess/FadeSquence
+MRUItem7=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_Full
+MRUItem8=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
+MRUItem9=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
+MRUItem10=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem11=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
+MRUItem12=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
+MRUItem13=/Game/UIElements/Menus/Wire_Cutters__text_png
+MRUItem14=/Game/ThirdPerson/Interfaces/IF_Inventory
+MRUItem15=/Game/UIElements/Menus/Kieth’s_ID_text_
+MRUItem16=/Game/ThirdPerson/Menus/S_ItemReference
+MRUItem17=/Game/ThirdPerson/Menus/W_Inventory
+MRUItem18=/Game/ThirdPerson/Menus/W_StartMenu
+MRUItem19=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_P1
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
